Added Weather page link.

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,9 @@
 
     <center>
         <h1>Homepage</h1>
-
+        <br>
+        <h3><a href = "/weather">Weather Page</a></h3>
+	</center>
 </body>
 
 </html>
