--- a/templates/index.html
+++ b/templates/index.html
@@ -17,10 +17,39 @@
 <body>
 
     <center>
-        <h1>Homepage</h1>
-        <br>
-        <h3><a href = "/weather">Weather Page</a></h3>
+      <h1>Predicting Crime in Chicago using Weather Data</h1>
+      <br>
 	</center>
+    <div class="row">
+	  <div class="col-sm-4">
+          <h3><a href = "/weather">Weather Statistics</a></h3>
+      </div>
+	  <div class="col-sm-4">
+          <h3><a href = "/crime">Crime Statistics</a></h3>
+      </div>
+	  <div class="col-sm-4">
+          <h3><a href = "/predictive">Crime Prediction</a></h3>
+      </div>
+	</div>
 </body>
 
 </html>
+
+
+<style>
+body {
+    color: white;
+    height: 2000px;
+    background-color: #303030;
+    text-decoration: none;
+}
+
+a {
+    color: #add8e6;
+}
+
+
+.row {
+    text-align: center;
+}
+</style>
