--- a/templates/index.html
+++ b/templates/index.html
@@ -18,17 +18,24 @@
 
     <center>
       <h1>Predicting Crime in Chicago using Weather Data</h1>
+      <h6>By: Joseph Boettcher, Zachary Braun, Justin Cheung, Asier Isayas, Ibrahim Khan</h6>
       <br>
 	</center>
     <div class="row">
 	  <div class="col-sm-4">
-          <h3><a href = "/weather">Weather Statistics</a></h3>
+          <h3><a href = "/weather">Weather Statistics
+          <img src="http://www.freestencilgallery.com/wp-content/uploads/2017/09/Weather-Icon-Rain-Stencil-thumb.jpg" alt="weather" height=100% width=100%>
+          </a></h3>
       </div>
 	  <div class="col-sm-4">
-          <h3><a href = "/crime">Crime Statistics</a></h3>
+          <h3><a href = "/crime">Crime Statistics
+          <img src="https://www.iconexperience.com/_img/i_collection_png/512x512/plain/criminal.png" alt="crime" height=100% width=100%>
+          </a></h3>
       </div>
 	  <div class="col-sm-4">
-          <h3><a href = "/predictive">Crime Prediction</a></h3>
+          <h3><a href = "/predictive">Crime Prediction
+          <img src="https://image.freepik.com/free-icon/bars-and-line-ascending-graphic-of-data-analytics_318-55048.jpg" alt="prediction" height=100% width=100%>
+          </a></h3>
       </div>
 	</div>
 </body>
@@ -48,6 +55,13 @@ a {
     color: #add8e6;
 }
 
+.col-sm-4 {
+    border: 3px solid white;
+}
+
+img {
+    border-radius: 25px;
+}
 
 .row {
     text-align: center;
