new crime pic for index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
       </div>
 	  <div class="col-sm-4">
           <h3><a href = "/crime">Crime Statistics
-          <img src="https://www.iconexperience.com/_img/i_collection_png/512x512/plain/criminal.png" alt="crime" height=100% width=100%>
+          <img src="https://image.freepik.com/free-icon/criminal-wearing-eye-piece-and-striped-top_318-49576.jpg" alt="crime" height=100% width=100%>
           </a></h3>
       </div>
 	  <div class="col-sm-4">
