--- a/templates/predictive.html
+++ b/templates/predictive.html
@@ -14,9 +14,7 @@
 
         <script>
         $(document).ready(function () {
-
-
-            //Depart
+            //TempVsCrime
             Highcharts.stockChart('containerTempVsCrime', {
                 // chart: {
                 //     zoomType: 'x',
@@ -105,5 +103,156 @@
             });
         });
         </script>
+
+
+        <div id="containerCorrelations" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+
+    <script>
+
+      $(document).ready(function () {
+		// Correlation Bar Chart
+		Highcharts.chart('containerCorrelations', {
+			chart: {
+				type: 'column'
+			},
+			title: {
+				text: 'Browser market shares. January, 2015 to May, 2015'
+			},
+			subtitle: {
+				text: 'Click the columns to view versions. Source: <a href="http://netmarketshare.com">netmarketshare.com</a>.'
+			},
+			xAxis: {
+				type: 'category'
+			},
+			yAxis: {
+				title: {
+					text: 'Total percent market share'
+				}
+
+			},
+			legend: {
+				enabled: false
+			},
+			plotOptions: {
+				series: {
+					borderWidth: 0,
+					dataLabels: {
+						enabled: true,
+						format: '{point.y:.1f}%'
+					}
+				}
+			},
+
+			tooltip: {
+				headerFormat: '<span style="font-size:11px">{series.name}</span><br>',
+				pointFormat: '<span style="color:{point.color}">{point.name}</span>: <b>{point.y:.2f}%</b> of total<br/>'
+			},
+
+			series: [{
+				name: 'Brands',
+				colorByPoint: true,
+				data: [{
+					name: 'Tavg',
+					y:  
+                    (function () {
+                        var output;
+						$.ajax({
+							async: false,
+							url: '/predictivedata',
+							success: function(data){
+								console.log(data);
+                                output = data
+							}
+						})
+                        return output['corrData']['Tavg'];
+                    }()),
+					drilldown: 'Tavg'
+				}, {
+					name: 'Tmin',
+					y:
+                    (function () {
+                        var output;
+						$.ajax({
+							async: false,
+							url: '/predictivedata',
+							success: function(data){
+								console.log(data);
+                                output = data
+							}
+						})
+                        return output['corrData']['Tmin'];
+                    }()),
+					drilldown: 'Tmin'
+				}, {
+					name: 'Tmax',
+					y:
+                    (function () {
+                        var output;
+						$.ajax({
+							async: false,
+							url: '/predictivedata',
+							success: function(data){
+								console.log(data);
+                                output = data
+							}
+						})
+                        return output['corrData']['Tmax'];
+                    }()),
+					drilldown: 'Tmax'
+				}, {
+					name: 'Depart',
+					y:
+                    (function () {
+                        var output;
+						$.ajax({
+							async: false,
+							url: '/predictivedata',
+							success: function(data){
+								console.log(data);
+                                output = data
+							}
+						})
+                        return output['corrData']['Depart'];
+                    }()),
+					drilldown: 'Depart'
+				}, {
+					name: 'Precipitation',
+					y:
+                    (function () {
+                        var output;
+						$.ajax({
+							async: false,
+							url: '/predictivedata',
+							success: function(data){
+								console.log(data);
+                                output = data
+							}
+						})
+                        return output['corrData']['PrecipTotal'];
+                    }()),
+					drilldown: 'Precipitation'
+				}, {
+					name: 'Heat',
+					y:
+                    (function () {
+                        var output;
+						$.ajax({
+							async: false,
+							url: '/predictivedata',
+							success: function(data){
+								console.log(data);
+                                output = data
+							}
+						})
+                        return output['corrData']['Heat'];
+                    }()),
+					drilldown: 'Heat'
+				}]
+			}],
+		});
+      });
+
+    </script>
+
     </body>
 </html>
